<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#00000000"
        app:columnCount="3"
        app:rowCount="1">

        <Button
            android:id="@+id/amazon"
            android:layout_margin="5sp"
            android:background="#00000000"
            android:text="@string/amazon"
            android:textColor="@color/white"
            android:textSize="18sp"

            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/assassin"
            android:layout_margin="5sp"
            android:background="#00000000"
            android:text="@string/assassin"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/barbarian"
            android:layout_margin="5sp"
            android:background="#00000000"
            android:text="@string/barbarian"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/druid"
            android:layout_margin="5sp"
            android:background="#00000000"
            android:text="@string/druid"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/necromancer"
            android:layout_margin="5sp"
            android:background="#00000000"
            android:text="@string/necromancer"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/paladin"
            android:layout_margin="5sp"
            android:background="#00000000"
            android:text="@string/paladin"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/hide"
            android:layout_margin="5sp"
            android:background="@color/white"
            android:text="@string/sorceress"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/sorceress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="#00000000"
            android:text="@string/sorceress"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:columnCount="2"
        app:rowCount="1">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/sorceressSkillsFragment"
            android:name="com.example.diablo2buildplanner.sorceress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_columnWeight="3"
            app:layout_rowWeight="1"
            tools:layout="@layout/fragment_sorceress" />

        <LinearLayout
            android:id="@+id/SkillsButtonsLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/tvTotalSkillPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total: 0" />

            <Button
                android:id="@+id/btnTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cold" />

            <Button
                android:id="@+id/btnMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lightning" />

            <Button
                android:id="@+id/btnBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire" />

        </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>